--- a/package.json
+++ b/package.json
@@ -9,15 +9,36 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onDidChangeTextDocument",
+    "onDidOpenTextDocument",
+    "onDidCloseTextDocument",
+    "onDidChangeActiveTextEditor"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "nestlesscode.helloWorld",
-        "title": "Hello World"
+        "command": "nestlesscode.checkNestedTabs",
+        "title": "Check Nested Tabs"
       }
-    ]
+    ],
+    "configuration": {
+      "type": "object",
+      "title": "Nest Less Code Configuration",
+      "properties": {
+        "nestlesscode.defaultConfMaxTabs": {
+          "type": "number",
+          "default": 3,
+          "description": "Maximum number of tabs for all supported languages files."
+        },
+        "nestlesscode.configSxMaxTabs": {
+          "type": "number",
+          "default": 6,
+          "description": "Maximum number of tabs for JSX and TSX files."
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
@@ -28,20 +49,25 @@
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
-    "test": "vscode-test"
+    "test": "npm run compile-tests && node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.90.0",
+    "@types/chai": "^4.3.16",
     "@types/mocha": "^10.0.6",
-    "@types/node": "18.x",
+    "@types/node": "^18.19.34",
+    "@types/vscode": "^1.90.0",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
-    "eslint": "^8.57.0",
-    "typescript": "^5.4.5",
-    "ts-loader": "^9.5.1",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
     "@vscode/test-cli": "^0.0.9",
-    "@vscode/test-electron": "^2.4.0"
+    "@vscode/test-electron": "^2.4.0",
+    "chai": "^5.1.1",
+    "eslint": "^8.57.0",
+    "glob": "^10.4.1",
+    "mocha": "^10.4.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.5",
+    "vscode-test": "^1.6.1",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
