Add keywords to package.json for improved searchability

--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
   "categories": [
     "Other"
   ],
+  "keywords": [
+    "productivity",
+    "workflow",
+    "efficiency",
+    "nesting",
+    "tabs",
+    "indentation"
+  ],
   "activationEvents": [
     "onDidChangeTextDocument",
-    "onDidOpenTextDocument",
     "onDidCloseTextDocument",
     "onDidChangeActiveTextEditor"
   ],
